# NeuralLib

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp  xor.csv
csv_serializer/: csv_serializer.cpp  csv_serializer.h
neural_net/: net_serializer.cpp  neural_net.cpp  neural_net.h
table/: table.cpp  table.h
utils/: utils.cpp  utils.h
